syntax = "proto3";
package side.lending;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/sideprotocol/side/x/lending/types";
// Status options for a lending pool
enum PoolStatus {
    ACTIVE = 0;
    INACTIVE = 1;
}

message LendingPool {
    string id = 1;
    cosmos.base.v1beta1.Coin supply = 2;
    uint64 total_shares = 3; 
    uint64 borrowed_amount = 4;
    PoolStatus status =5;
}

enum VaultStatus {
    Initial = 0;
    Funded = 1;
    Lending = 2;
    Close = 3;
}

message Vault {
    string vault_address = 1; // id
    string borrower = 2;
    string agency = 3;
    string hash_loan_secret = 4;
    uint64 maturity_time = 5;
    string final_timeout = 6; // use absolute time or ralative time?
    repeated Collateral collaterals = 7;
    uint64 total_collateral_amount = 8;
    VaultStatus status = 9;
}

message Collateral {
    string tx = 1; 
    string vault_address = 2;
    cosmos.base.v1beta1.Coin amount = 3;
    string borrower = 4;
    google.protobuf.Timestamp create_at = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

enum LoanStatus {
    Created = 0;
    DCA_Signed = 1;
    Repay_Initail = 2;
    Repay_Confirmed = 3;
    Liquidated = 4;
    Closed = 5;
}

message Loan {
    string vault_address = 1; // id
    string borrower = 2;
    cosmos.base.v1beta1.Coin borrow_amount = 3;
    cosmos.base.v1beta1.Coin fees = 4;
    uint32 period = 5;
    uint32 interest_rate = 6;
    string event_id = 7;
    uint64 current_price = 8;
    string attestation_id = 9;
    string cets = 10;
    string loan_secret = 11;
    string repay_adaptor_point = 12;
    google.protobuf.Timestamp create_at = 13 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
    LoanStatus status = 14;
}
