syntax = "proto3";
package side.lending;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/base/v1beta1/coin.proto";
import "side/lending/lending.proto";
import "side/lending/params.proto";

option go_package = "github.com/sideprotocol/side/x/lending/types";

// Msg defines the Msg service.
service Msg {
    option (cosmos.msg.v1.service) = true;

    rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
    rpc AddLiquidity(MsgAddLiquidity) returns (MsgAddLiquidityResponse);
    rpc RemoveLiquidity(MsgRemoveLiquidity) returns (MsgRemoveLiquidityResponse);
    rpc Apply(MsgApply) returns (MsgApplyResponse);
    rpc Approve(MsgApprove) returns (MsgApproveResponse);
    rpc Redeem(MsgRedeem) returns (MsgRedeemResponse);
    rpc Repay(MsgRepay) returns (MsgRepayResponse);
    rpc SubmitRepaymentAdaptorSignature(MsgSubmitRepaymentAdaptorSignature) returns (MsgSubmitRepaymentAdaptorSignatureResponse);
    rpc SubmitLiquidationCetSignatures(MsgSubmitLiquidationCetSignatures) returns (MsgSubmitLiquidationCetSignaturesResponse);
    rpc Close(MsgClose) returns (MsgCloseResponse);

    // UpdateParams defines a governance operation for updating the x/dlc module
    // parameters. The authority defaults to the x/gov module account.
    //
    // Since: cosmos-sdk 0.47
    rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgCreatePool {
    option (cosmos.msg.v1.signer) = "creator";
    
    string creator = 1;
    string pool_id = 2;
    string lending_asset = 3;

}

message MsgCreatePoolResponse{}

message MsgRepay{
    option (cosmos.msg.v1.signer) = "borrower";

    string borrower = 1;
    string loan_id = 2;
    string adaptor_point = 3;
}

message MsgRepayResponse{}

message MsgRedeem {
    option (cosmos.msg.v1.signer) = "borrower";
    string borrower = 1;
    string loan_id = 2;
    string loan_secret = 3;
}

message MsgRedeemResponse{}

message MsgAddLiquidity {
    option (cosmos.msg.v1.signer) = "lender";

    string pool_id = 1;
    string lender = 2;
    cosmos.base.v1beta1.Coin amount = 3;
}

message MsgAddLiquidityResponse {
    cosmos.base.v1beta1.Coin shares = 1;
}

message MsgRemoveLiquidity {
    option (cosmos.msg.v1.signer) = "lender";

    string lender = 1;
    cosmos.base.v1beta1.Coin shares = 2;
}

message MsgRemoveLiquidityResponse {
    cosmos.base.v1beta1.Coin amount = 1;
}

message MsgApply {
    option (cosmos.msg.v1.signer) = "borrower";

    string borrower = 1;
    string borrower_pubkey = 2;
    string loan_secret_hash = 3;
    int64 maturity_time = 4;
    int64 final_timeout =5;
    
    string pool_id = 6;
    cosmos.base.v1beta1.Coin borrow_amount = 7;
    uint64 event_id = 8;
    uint64 agency_id = 9;
    string deposit_tx = 10;
    string liquidation_cet = 11;
    string liquidation_adaptor_signature = 12;
}

message MsgApplyResponse {
    string vault_address = 1;
}

message MsgApprove {
    option (cosmos.msg.v1.signer) = "relayer";
    
    string relayer = 1;
    string deposit_tx_id =2;
    string block_hash = 3;
    repeated string proof = 4;
}

message MsgApproveResponse {

}

message MsgSubmitRepaymentAdaptorSignature {
    option (cosmos.msg.v1.signer) = "sender";
    
    string sender = 1;
    string loan_id = 2;
    string adaptor_signature = 3;
}

message MsgSubmitRepaymentAdaptorSignatureResponse {

}

message MsgSubmitLiquidationCetSignatures {
    option (cosmos.msg.v1.signer) = "sender";
    
    string sender = 1;
    string loan_id = 2;
    repeated string signatures = 3;
}

message MsgSubmitLiquidationCetSignaturesResponse {

}

message MsgClose {
    option (cosmos.msg.v1.signer) = "relayer";
    
    string relayer = 1;
    string loan_id =2;
    string signature = 3;
}

message MsgCloseResponse{}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1;

  // params defines the x/dlc parameters to be updated.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the Msg/UpdateParams response type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}